# remlight

./: .gitignore  Dockerfile  GETTING_STARTED.md  LICENSE  README.md  code-walkthrough.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.githooks/: pre-commit  pre-push
app/: .env.development  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
app/e2e/: agent-builder-chat.spec.ts  agent-builder.spec.ts  chat.spec.ts
app/src/: App.tsx  index.css
docs/: evaluation.md  futures.md  tools-and-servers.md
examples/: README.md  session.yaml  so-session.yaml  so-sse.txt  sse.txt
ontology/: README.md
ontology/concepts/: deep-learning.md  machine-learning.md  neural-network.md  supervised-learning.md  unsupervised-learning.md
ontology/design/: README.md  architecture.md  declarative-agents.md  entities.md
ontology/guides/: README.md  cli.md  multi-agent.md  quick-start.md
ontology/models/: bert.md  gpt.md  llama.md  transformer.md
ontology/reference/: README.md  agent-schema.md  headers.md  mcp-tools.md  messages.md  rem-query.md  sse-events.md
ontology/scripts/: verify_links.py
ontology/techniques/: attention.md  backpropagation.md
remlight/: __init__.py  mcp_server.py  settings.py
remlight/agentic/: README.md  (+10 more)
schemas/: README.md  action-agent.yaml  agent-builder.yaml  orchestrator-agent.yaml  query-agent.yaml  rem-simulator.yaml  test_structured_output.yaml  worker-agent.yaml
sql/: erd-slim.md  erd.md  install.sql
tests/: README.md  conftest.py
(+143 files in other folders)
